<resources>
    <string name="app_name">HotelBookingAppOfUser</string>
    <!--    Màn hình nhà-->
    <string name="txtTimKiem">Bạn muốn tìm kiếm gì...</string>
    <string name="tinhThanh">Tỉnh thành</string>
    <string name="loaiPhong">Loại phòng</string>
    <string name="tieuChi">Tiêu chí</string>
    <string name="btnNha">Tất cả phòng</string>
    <string name="btnYeuThich">Yêu thích</string>
    <string name="btnTaiKhoan">Tài khoản</string>
    <string name="txtTenPhong">Tên phòng</string>
    <string name="tvGia">24000000VND/Đêm</string>

    <string-array name="spTieuChi">
        <!--        <item>Đặt nhiều nhất</item>-->
        <!--        <item>Khuyến mãi</item>-->
        <item>Rating</item>
        <item>Giá tăng dần</item>
        <item>Giá giảm dần</item>
    </string-array>
    <!--    Kết thúc màn hình nhà-->


    <!--    Màn hình đăng ký-->
    <string name="tvTenTK_DangKy">Tên tài khoản</string>
    <string name="hintNhapTenTK_DangKy">Nhập tên tài khoản.....</string>
    <string name="tvEmail_DangKy">Email</string>
    <string name="hintNhapEmail_DangKy">Nhập email.....</string>
    <string name="tvSDT">Số điện thoại</string>
    <string name="hintNhapSDT">Nhập số điện thoại.....</string>
    <string name="tvMK_DangKy">Mật khẩu</string>
    <string name="hintMK_DangKy">Nhập mật khẩu.....</string>
    <string name="tvXacNhanMK">Xác nhận mật khẩu</string>
    <string name="hintXacNhanMK">Xác nhận mật khẩu.....</string>
    <string name="tvCheckBox">Tôi đồng ý mọi điều khoản và dịch vụ</string>
    <string name="btnDangKy">Đăng ký</string>
    <!--    Kết thúc màn hình đăng ký-->


    <!--    Màn hình đăng nhập-->
    <string name="tvTenTK_DangNhap">Tên tài khoản</string>
    <string name="hintNhapTenTK_DangNhap">Nhập tên tài khoản.....</string>
    <string name="tvMK_DangNhap">Mật khẩu</string>
    <string name="hintMK_DangNhap">Nhập mật khẩu.....</string>
    <string name="btnGG">Đăng nhập với tài khoản Google</string>
    <string name="btnFB">Đăng nhập với tài khoản Facebook</string>
    <string name="btnIns">Đăng nhập với tài khoản Instagram</string>
    <string name="btnDangNhap">Đăng nhập</string>
    <string name="btnDangXuat">Đăng xuất</string>
    <string name="tvTitleDK">Chưa có tài khoản hãy</string>
    <string name="tvDK">đăng ký</string>
    <string name="tvQuenTaiKhoan">Quên tài khoản?</string>
    <!--    Kết thúc màn hình đăng nhập-->


    <!--    Màn hình quên tài khoản-->
    <string name="tvEmail_QTK">Email</string>
    <string name="hintNhapEmail_QTK">Nhập email.....</string>
    <string name="btnQuenMatKhau">Đặt lại mật khẩu</string>
    <string name="tvQuenMatKhau">Bạn đang gặp sự cố về tài khoản? Hãy nhập tài khoản email đăng ký để được đặt lại mật khẩu.<br /><br />
        Lưu ý: Để thuận tiện trong việc xác nhận tài khoản. Vui lòng bật quyền truy cập: <br /><br />
        https://myaccount.google.com/security -> Quyền truy cập của ứng dụng kém an toàn -> bật quyền truy cập
     </string>
    <!--    Kết thúc màn hình quên tài khoản-->

    <!--    Dialog Màn hình quên tài khoản-->
    <string name="tv_Dialog_Email">Email</string>
    <string name="tv_Dialog_TenTK">Tên tài khoản của bạn</string>
    <string name="txt_Dialog_OTP">Nhập mã OTP</string>
    <string name="txt_Dialog_MatKhau">Nhập mật khẩu mới</string>
    <string name="positive">Xác nhận</string>
    <string name="negative">Hủy</string>
    <!--    Dialog Kết thúc màn hình quên tài khoản-->

    <!--    Màn hình tài khoản người dùng-->
    <string name="tv_TenNguoiDung_MHTK">Tên đầy đủ</string>
    <string name="tv_QuocTich_MHTK">Quốc tịch</string>
    <string name="tv_Email_MHTK">Email</string>
    <string name="tv_SoDienThoai_MHTK">Số điện thoại</string>
    <string name="tv_NgaySinh_MHTK">Ngày sinh</string>
    <string name="tv_CapNhat_MHTK">Cập nhật</string>
    <string name="tv_DangXuat_MHTK">Đăng xuất</string>
    <!--    Kết thúc tài khoản người dùng-->

    <!--    Menu bottom navigation-->
    <string name="home">Tất cả phòng</string>
    <string name="favorite">Yêu thích</string>
    <string name="account">Tài khoản</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">139038610997148</string>
    <string name="fb_login_protocol_scheme">fb139038610997148</string>
    <string name="map_api_key" translatable="false">AIzaSyC-qATUbRx_LgZfpPesW-QWe37K8aYes2k</string>

    <string name="titleToolbar">Yêu thích</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ================= Man hinh tai khoan nguoi dung =================== -->
    <string name="title_tai_khoan_nguoi_dung">Tài khoản người dùng</string>
    <string name="tv_ten_day_du">Tên đầy đủ</string>
    <string name="tv_quoc_tich">Quốc tịch</string>
    <string name="hint_quoc_tich">Nhập quốc tịch...</string>
    <string name="tv_email_nguoi_dung">Email</string>
    <string name="hint_email_nguoi_dung">Nhập email...</string>
    <string name="tv_so_dien_thoai">Số điện thoại</string>
    <string name="hint_so_dien_thoai">Nhập số điện thoại...</string>
    <string name="tv_ngay_sinh">Ngày sinh</string>
    <string name="hint_them_ngay_sinh">Thêm ngày sinh...</string>
    <string name="btn_cap_nhat">Cập nhật</string>
    <string name="btn_dang_xuat">Đăng xuất</string>
    <string name="tv_cac_phong_da_dat">Các phòng đã đặt</string>

    <!-- Dialog Chon ngay sinh -->
    <string name="title_dialog_chon_ngay_sinh">Chọn ngày sinh</string>
    <string name="btn_Thoi">Thôi</string>
    <string name="btn_Them">Thêm</string>

    <!-- ================= END - Man hinh tai khoan nguoi dung =================== -->

</resources>