<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/liner_ver"
    tools:context=".activities.ManHinhDangKy">

    <ImageView
        android:id="@+id/imageView_Anh_Dai_Dien_DangKy"
        style="@style/imageView_DangKy" />

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textViewTenTK_DangKy"
            style="@style/TextView_Nhap"
            android:text="@string/tvTenTK_DangKy"></TextView>

        <EditText
            android:id="@+id/editTextTenTK_DangKy"
            style="@style/EditText_Nhap"
            android:hint="@string/hintNhapTenTK_DangKy">
        </EditText>

    </LinearLayout>

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textViewEmail"
            style="@style/TextView_Nhap"
            android:text="@string/tvEmail_DangKy"></TextView>

        <EditText
            android:id="@+id/editText_Email_DangKy"
            style="@style/EditText_Nhap"
            android:hint="@string/hintNhapEmail_DangKy"></EditText>
    </LinearLayout>

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textViewSDT"
            style="@style/TextView_Nhap"
            android:text="@string/tvSDT"></TextView>

        <EditText
            android:id="@+id/editText_SDT_DangKy"
            style="@style/EditText_Nhap"
            android:hint="@string/hintNhapSDT"></EditText>
    </LinearLayout>

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textViewMatKhau_DangKy"
            style="@style/TextView_Nhap"
            android:text="@string/tvMK_DangKy"></TextView>

        <EditText
            android:id="@+id/editText_MatKhau_DangKy"
            style="@style/EditText_Nhap"
            android:hint="@string/hintMK_DangKy"></EditText>
    </LinearLayout>

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textViewXacNhan"
            style="@style/TextView_Nhap"
            android:text="@string/tvXacNhanMK"></TextView>

        <EditText
            android:id="@+id/editText_XacNhan_DangKy"
            style="@style/EditText_Nhap"
            android:hint="@string/hintXacNhanMK"></EditText>
    </LinearLayout>

    <LinearLayout style="@style/liner_hor">

        <CheckBox
            android:id="@+id/checkBox_DangKy"
            style="@style/CheckBox_DangKy"
            android:checked="false"></CheckBox>

        <TextView
            android:id="@+id/textViewCheckBox"
            style="@style/TextViewCheckBox_DangKy"
            android:text="@string/tvCheckBox"></TextView>
    </LinearLayout>

    <Button
        android:id="@+id/button_DangKy"
        style="@style/ButtonDangKy"
        android:text="@string/btnDangKy"></Button>
</LinearLayout>