<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/liner_ver"
    tools:context=".activities.ManHinhDangNhap">

    <ImageView
        android:id="@+id/imageViewDangNhap"
        style="@style/imageView_DangNhap" />

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textViewTenTK_DangNhap"
            style="@style/TextView_Nhap"
            android:text="@string/tvTenTK_DangNhap"></TextView>

        <EditText
            android:id="@+id/editTextTenTK_DangNhap"
            style="@style/EditText_Nhap"
            android:hint="@string/hintNhapTenTK_DangNhap"></EditText>
    </LinearLayout>

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textViewMatKhau_DangNhap"
            style="@style/TextView_Nhap"
            android:text="@string/tvMK_DangNhap"></TextView>

        <EditText
            android:id="@+id/editTextMatKhau_DangNhap"
            style="@style/EditText_Nhap"
            android:inputType="textPassword"
            android:hint="@string/hintMK_DangNhap"></EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_MH_Dang_Nhap_Press_QTK"
        style="@style/TextView_DangNhap_QTK"
        android:text="@string/tvQuenTaiKhoan"></TextView>

    <Button
        android:id="@+id/button_DangNhap"
        style="@style/ButtonDangNhap"
        android:text="@string/btnDangNhap"></Button>

    <Button
        android:id="@+id/button_DangNhap_Google"
        style="@style/ButtonDangNhap_others"
        android:text="@string/btnGG"></Button>


    <Button
            android:id="@+id/button_DangNhap_Facebook"
            style="@style/ButtonDangNhap_others"
            android:text="@string/btnFB"></Button>

<!--    <com.facebook.login.widget.LoginButton-->
<!--        xmlns:fb="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/button_DangNhap_Facebook"-->
<!--        fb:login_text="@string/btnFB"-->
<!--        fb:logout_text="@string/btnDangXuat"-->
<!--        style="@style/ButtonDangNhap_others" />-->

    <Button
        android:id="@+id/button_DangNhap_Twitter"
        style="@style/ButtonDangNhap_others"
        android:text="@string/btnIns"></Button>

    <LinearLayout style="@style/liner_hor">

        <TextView
            android:id="@+id/textView"
            style="@style/TextView_DangNhap_ChuaCoTK"
            android:text="@string/tvTitleDK"></TextView>

        <TextView
            android:id="@+id/textView_MH_Dang_Nhap_Press_Dang_Ky"
            style="@style/TextView_DangNhap_ChuaCoTK_dangky"
            android:text="@string/tvDK"></TextView>
    </LinearLayout>
</LinearLayout>