<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/liner_ver"
    android:weightSum="4"
    tools:context=".activities.Man_Hinh_Quen_Tai_Khoan">

    <ImageView
        android:id="@+id/imageViewDangKy"
        android:layout_weight="1"
        style="@style/imageView_QuenTaiKhoan" />

    <TextView
        android:id="@+id/textViewCheckBox"
        style="@style/TextView_QTK_MoTa"
        android:text="@string/tvQuenMatKhau"></TextView>

    <LinearLayout
        style="@style/liner_hor"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textView"
            style="@style/TextView_Nhap"
            android:text="@string/tvEmail_QTK"></TextView>

        <EditText
            android:id="@+id/editText_Email_QMK"
            style="@style/EditText_Nhap"
            android:hint="@string/hintNhapEmail_QTK"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button_DatLaiMatKhau_QMK"
        style="@style/ButtonQuenTaiKhoan"
        android:text="@string/btnQuenMatKhau"></Button>

</LinearLayout>